# swanson_robot

./: README.md  outfile  ros_net_env_setup.sh  rosbag_topic_filter.py
swanson_algorithms/: CMakeLists.txt  package.xml
swanson_algorithms/cfg/: Vboats.cfg
swanson_algorithms/config/: encoder_imu_fusion.yaml  rtabmap_fusion.yaml  template_fusion.yaml
swanson_algorithms/config/move_base/: local_costmap_params.yaml  local_costmap_params_2d.yaml
swanson_algorithms/doc/: focused_rgbd_odom_params.txt  focused_rtabmap_params.txt  rgbd_odom_params.txt  rosbag_offline.txt  rtabmap_param.txt
swanson_algorithms/include/swanson_algorithms/: angle_test.h  vboats_ros.h
swanson_algorithms/launch/: depth_to_pc.launch  localization.launch  pcl_tests.launch  rtabmap.launch  rtabmap_backup.launch  rtabmap_fusion.launch  rtabmap_mapping.launch  rtabmap_move.launch  rtabmap_viz.launch  rtabmap_vo.launch  rtabmap_vslam.launch  sensor_fusion.launch  test_icp.launch  test_pcl_filters.launch  test_pcl_polygon.launch  test_pcl_sac.launch  vboats.launch  vboats_test.launch
swanson_algorithms/src/: angle_test.cpp  angle_test_node.cpp  pcl_tests.cpp  test_image_proc.cpp  vboats_ros.cpp  vboats_ros_node.cpp
swanson_base/: CMakeLists.txt  package.xml
swanson_base/cfg/: Drivetrain.cfg
swanson_base/config/: encoder_imu_fusion.yaml  fusion.yaml
swanson_base/config/move_base/: common_costmap_params.yaml  costmap_common_params.yaml  costmap_common_params_2d.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_3d.yaml  trajectory_planner.yaml
swanson_base/include/swanson_base/: diffdrive_roboclaw_skidsteer_drivetrain.h  dual_roboclaw_skidsteer_drivetrain.h
swanson_base/launch/: diffdrive_drivetrain_bringup.launch  drivetrain_bringup.launch  fusion_bringup.launch  joy_bringup.launch  minimal_bringup.launch  minimal_bringup_joy.launch  minimal_fusion.launch  move_base.launch  rtabmap_fusion.launch  sensor_bringup.launch  sensors_bringup.launch
swanson_base/src/: diffdrive_roboclaw_skidsteer_drivetrain.cpp  diffdriveclaw_skidsteer_drivetrain.cpp  diffdriveclaw_skidsteer_drivetrain_node.cpp  dual_roboclaw_skidsteer_drivetrain.cpp  dualclaw_skidsteer_drivetrain_node.cpp
swanson_controls/: CMakeLists.txt  package.xml
swanson_controls/cfg/: Gimbal.cfg
swanson_controls/include/swanson_controls/: camera_gimbal_controller_ros.h
swanson_controls/launch/: camera_gimbals.launch
swanson_controls/src/: camera_gimbal_controller_ros.cpp  camera_gimbal_controller_ros_node.cpp
swanson_msgs/: CMakeLists.txt  package.xml
swanson_msgs/cfg/: Vboats.cfg
swanson_msgs/msg/: DiffDriveClawInfo.msg  DualClawInfo.msg  VboatsObstacle.msg  VboatsObstacles.msg
swanson_nodelets/: CMakeLists.txt  nodelet_plugins.xml  package.xml
swanson_nodelets/include/swanson_nodelets/: camera_d4xx_nodelet.h  vboats_nodelet.h
swanson_nodelets/src/: vboats_nodelet.cpp
swanson_robot/: CMakeLists.txt  package.xml
swanson_sensors/: CMakeLists.txt  package.xml
swanson_sensors/config/: multiplexed_imus_config.yaml  razor_m0_imu.ini
swanson_sensors/include/swanson_sensors/: bno055_i2c_ros.h  camera_d415_ros.h  camera_d4xx_ros.h  rtimu_ros.h
swanson_sensors/launch/: camera_d400.launch  camera_d4xx.launch  depth_scan_matcher.launch  depth_to_pc.launch  imu_filter.launch  pc_filter.launch  rt_imu.launch  test_config.launch
swanson_sensors/src/: bno055_i2c_ros.cpp  bno055_i2c_ros_node.cpp  bno055_multiplexed_node.cpp  camera_d415_ros.cpp  camera_d415_ros_node.cpp  camera_d4xx_ros.cpp  camera_d4xx_ros_node.cpp  rtimu_ros.cpp  rtimu_ros_node.cpp
swanson_teleop/: CMakeLists.txt  package.xml
swanson_teleop/include/swanson_teleop/: android_ros_interface_listener.h
swanson_teleop/src/: android_interface_listener_node.cpp  android_ros_interface_listener.cpp
tools/: mavros_paths_reset.sh  reboot_mavros.sh  reset_mavros.sh  reset_odoms.sh  rosbag_tf_filter.py  rosbag_topic_filter.py  run_mavros.sh  setup-ros-env.sh
