<?xml version="1.0"?>
<package format="2">
  <name>swanson_base</name>
  <version>0.1.0</version>
  <description>Swanson robot driver</description>

  <maintainer email="hunter.lw.young@gmail.com">Hunter Young</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robocommander</build_depend>
  <!-- <depend>robocommander</depend> -->
  
  <build_depend>swanson_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>swanson_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>robocommander</exec_depend>

  <export></export>
</package>
