<?xml version="1.0"?>
<package>
  <name>swanson_controls</name>
  <version>0.1.0</version>
  <description>Controllers for Swanson robot</description>

  <maintainer email="hunter.lw.young@gmail.com">Hunter Young</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>swanson_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>swanson_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export></export>
</package>
