<?xml version="1.0"?>
<package>
  <name>swanson_msgs</name>
  <version>0.1.0</version>
  <description>Messages for the Swanson robot</description>

  <maintainer email="hunter.lw.young@gmail.com">Hunter Young</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
