<?xml version="1.0"?>
<package format="2">
     <name>swanson_sensors</name>
     <version>0.1.0</version>
     <description>Package used for any and all sensors that the Swanson robot platform might be equipped with</description>
     <maintainer email="hunter.lw.young@gmail.com">Hunter Young</maintainer>

     <license>GNU</license>

     <buildtool_depend>catkin</buildtool_depend>
     <build_export_depend>rospy</build_export_depend>
     <build_export_depend>roscpp</build_export_depend>
     <build_depend>rospy</build_depend>
     <build_depend>roscpp</build_depend>
     <build_depend>message_generation</build_depend>
     <build_depend>std_msgs</build_depend>
     <build_depend>tf</build_depend>
     <build_depend>cv_bridge</build_depend>
     <build_depend>image_transport</build_depend>
     <build_depend>sensor_msgs</build_depend>
     <build_depend>geometry_msgs</build_depend>
     <build_depend>std_srvs</build_depend>
     <exec_depend>roscpp</exec_depend>
     <exec_depend>rospy</exec_depend>
     <exec_depend>message_runtime</exec_depend>
     <exec_depend>message_generation</exec_depend>
     <exec_depend>std_msgs</exec_depend>
     <exec_depend>tf</exec_depend>
     <exec_depend>cv_bridge</exec_depend>
     <exec_depend>image_transport</exec_depend>
     <exec_depend>sensor_msgs</exec_depend>
     <exec_depend>geometry_msgs</exec_depend>
     <exec_depend>std_srvs</exec_depend>


     <!-- The export tag contains other, unspecified, tags -->
     <export>
          <!-- Other tools can request additional information be placed here -->
     </export>
</package>
